--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~43.0.2",
+    "expo-linear-gradient": "~10.0.3",
     "expo-linking": "~2.4.2",
+    "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
     "react-native-normalize": "^1.0.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1",
-    "expo-splash-screen": "~0.13.5"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
+    "@types/react-dom": "^17.0.11",
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
   },
