--- a/app.json
+++ b/app.json
@@ -27,6 +27,10 @@
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
+    },
+    "packagerOpts": {
+      "config": "metro.config.js",
+      "sourceExts": ["ts", "tsx", "js", "jsx", "svg"]
     }
   }
 }
